# Db_MigrationRlEnviornment

./: .gitignore  Dockerfile  GRADER.md  README.md  README2.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
.claude/: settings.json
.github/workflows/: keep-alive.yml
db_migration_env/: __init__.py  client.py  db_engine.py  models.py  reward.py
db_migration_env/graders/: __init__.py  migration_grader.py
db_migration_env/server/: app.py  baseline_runner.py  environment.py  gradio_ui.py  run.py
db_migration_env/tasks/: __init__.py  initial_schema.sql  registry.py  target_schema.sql  task_easy.py  task_easy_2.py  task_hard.py  task_hard2.py  task_hard_2.py  task_hard_hospital copy.py  task_hard_hospital.py  task_hard_marketplace.py  task_medium.py  task_medium_2.py  task_medium_instagram.py
docs/: grader.md  reward.md  task_desc.md
outputs/: baseline_results.json
server/: app.py
