[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-migration-env"
version = "1.0.0"
description = "OpenEnv RL environment for database schema & data migration using SQL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "techSaswata"}]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.12.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[project.scripts]
server = "db_migration_env.server.run:main"

[tool.setuptools.packages.find]
include = ["db_migration_env*"]
